{
    "name": "Player Controls",
    "maps": [
        {
            "name": "Movement",
            "id": "0f0ec7a9-a0b4-4775-83ae-3317d46dd74f",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "25e66ee6-aa8e-4e84-b1a6-abb8e555fc54",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "ccb034eb-79a5-4729-8379-2b6be35ee113",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "94352990-f210-46d0-8fe2-02872a214591",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ef529bcb-7dc2-42be-a2bf-0470e68d95ec",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "27f784df-d7cb-4a86-acd5-ff8f72a8195a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2369f7c8-69e2-406a-84d4-46904e20c6cd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0f4bf90e-3a08-4715-a763-89a7b61b05b4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fadd9d97-2d88-4762-802a-aa495b20ff6e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Combat",
            "id": "6918f40d-e94f-47e3-a4ed-9573cf230384",
            "actions": [
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "5e500882-17cd-43a1-b3b5-394d38ddce4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Button",
                    "id": "203d7fd0-0a5c-45e8-81d1-d2a692cb78b6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryAttack",
                    "type": "Button",
                    "id": "4cc56411-d387-4889-b8c8-ad7cc3524d87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d6c94818-911a-4c3c-8e09-df56802cbe40",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03d58914-a7ee-4a35-8647-95ae6bdb72b8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "400dc682-485b-4a7b-b749-c6c3e86fadb6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "662fa7c6-c36d-4e0c-bd60-29c12e69b87e",
            "actions": [
                {
                    "name": "Keyboard",
                    "type": "Value",
                    "id": "298a756c-1853-4820-bb9e-d7e39878772f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d908af97-0102-47be-9ee4-a19ce28da097",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "Scale",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69f2e548-3209-4f5c-984d-32768ab322d9",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "Scale(factor=2)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bbadb54-f99d-4f7d-ae0b-2777f332d2ec",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "Scale(factor=3)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0f33374-c5ec-4fd1-9b24-82c5ceeee3e2",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2608b6a5-002c-4df1-b8ae-590c68231b61",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "Scale(factor=5)",
                    "groups": "",
                    "action": "Keyboard",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Interact",
            "id": "47bb18d6-ce9d-44e0-bbe3-c2523c540539",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "74be679e-3880-4cb9-931c-3bd00c1205df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b9d4e578-fbbf-4355-b87a-a2dd894ba076",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}